# lazyanki

./: .gitignore  Cargo.toml  README.md
anki/: Cargo.toml
lazyanki-anki/: Cargo.toml
lazyanki-anki/src/: lib.rs  models.rs
lazyanki-common/: Cargo.toml
lazyanki-common/src/: lib.rs
lazyanki-parser/: Cargo.toml
lazyanki-parser/src/: lib.rs  utils.rs
parser/: Cargo.toml
parser/src/: lib.rs  utils.rs
src/: Cargo.toml  commands.rs  config.rs  main.rs
