[workspace]
members = ["anki", "parser"]
default-members = [".", "anki", "parser"]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Nazar"]
license = "MIT"
repository = "https://github.com/awalki/lazyanki"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }

reqwest = { version = "0.12.24", features = ["json"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

scraper = "0.24.0"
regex = "1.12.2"
url = "2.5.7"

clap = { version = "4.5.49", features = ["derive"] }

anki = { path = "./anki" }
parser = { path = "./parser" }

[package]
name = "lazyanki"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
parser.workspace = true
anki.workspace = true
tokio.workspace = true
reqwest.workspace = true
regex.workspace = true
clap.workspace = true

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
strip = "symbols"
