[workspace]
members = ["lazyanki-anki", "lazyanki-common", "lazyanki-parser"]
default-members = [".", "lazyanki-anki", "lazyanki-parser"]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
authors = ["Nazar"]
license = "MIT"
repository = "https://github.com/awalki/lazyanki"
description = "LazyAnki - Rust workspace for Anki automation and parsing tools"
keywords = ["anki", "automation", "scraping", "parser", "cli"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"
homepage = "https://github.com/awalki/lazyanki"
documentation = "https://docs.rs/lazyanki"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }

reqwest = { version = "0.12.24", features = ["json"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

scraper = "0.24.0"
regex = "1.12.2"
url = "2.5.7"

oxilangtag = "0.1.5"
directories = "6.0.0"
toml = "0.9.8"

clap = { version = "4.5.49", features = ["derive"] }

lazyanki-anki = { path = "./lazyanki-anki", version = "0.1.1" }
lazyanki-parser = { path = "./lazyanki-parser", version = "0.1.2" }

[package]
name = "lazyanki"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow.workspace = true
lazyanki-parser = { path = "./lazyanki-parser", version = "0.1.2" }
lazyanki-anki = { path = "./lazyanki-anki", version = "0.1.1" }
lazyanki-common = { path = "./lazyanki-common", version = "0.1.0" }
tokio.workspace = true
reqwest.workspace = true
regex.workspace = true
clap.workspace = true
serde.workspace = true

directories.workspace = true
toml.workspace = true

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
strip = "symbols"
