[package]
name = "anki"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AnkiConnect API client library for Rust"
keywords = ["anki", "api", "client", "http", "async"]
categories = ["web-programming", "api-bindings"]

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
