[package]
name = "lazyanki-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser library for language learning content extraction"
keywords = ["parser", "scraper", "language", "learning"]
categories = ["web-programming", "parsing"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
regex.workspace = true
scraper.workspace = true
url.workspace = true
lazyanki-common.workspace = true
