[package]
name = "lazyanki-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web scraping dictionary and parsing utilities for Rust"
keywords = ["parser", "scraper", "web", "html", "regex"]
categories = ["web-programming", "parser-implementations"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
scraper.workspace = true
url.workspace = true
lazyanki-anki = { path = "../anki", version = "0.1.1" }
regex.workspace = true
